[Alter]修改ignore文件，忽略特定文件，移除test文件夹 [Alter]给项目进行脱敏处理 [Add]增加注册接口以及发送验证码接口
